--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@tanstack/react-query": "^5.62.8",
         "@tanstack/react-query-devtools": "^5.62.8",
+        "axios": "^1.7.9",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.0.2"
