--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "PlayRates is a Video Game Tracking website.",
     "main": "index.js",
     "scripts": {
+        "setup": "npm install && npm install --prefix frontend && npm install --prefix backend",
         "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
     },
     "repository": {
