--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "description": "",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "playrates": "file:.."
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
