--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@tanstack/react-query": "^5.62.8",
         "@tanstack/react-query-devtools": "^5.62.8",
         "axios": "^1.7.9",
+        "playrates": "file:..",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.0.2"
